not proper ui bank